# UniversityRelated

./: LICENSE
c/embedded-linux-labs/: .gitignore  README.md
c/embedded-linux-labs/lab1/: git-study.md
c/embedded-linux-labs/lab10/: answers.md  control-ruuvitags.py
c/embedded-linux-labs/lab2/: .CMakeLists.txt.swp  libraries.md
c/embedded-linux-labs/lab3/: CMakeLists.txt  Lab3_answers.txt
c/embedded-linux-labs/lab3/src/: lab3_exercise2_waveform.csv
c/embedded-linux-labs/lab4/4.0/: CMakeLists.txt  answers.md  cron_blink.txt  cron_motor.txt
c/embedded-linux-labs/lab4/4.0/scripts/: wrapper.sh
c/embedded-linux-labs/lab4/4.1/: answers.md
c/embedded-linux-labs/lab4/4.2/: CMakeLists.txt  table.txt
c/embedded-linux-labs/lab5/: CMakeLists.txt  answers.txt
c/embedded-linux-labs/lab6/: CMakeLists.txt  copy_stuff.sh
c/embedded-linux-labs/lab7/: CMakeLists.txt  demo.md
c/embedded-linux-labs/lab8/results/: errors.txt  mypage.html
c/embedded-linux-labs/lab9/: poll-demo.html
c/embedded-linux-labs/lab9/9.3/: CMakeLists.txt
c/embedded-linux-labs/lab9/9.4/: CMakeLists.txt
c/embedded-linux-labs/lab9/9.4/results/: load20rate.txt
c/embedded-linux-labs/lab9/results/: lab4_ledon.html  results.txt
md/beer-rnd/: OLD_README.md  README.md
md/beer-rnd/lib/: README.md
md/beer-rnd/old/: README.md
md/beer-rnd/old/esp32/: bme688.ino
md/beer-rnd/old/training_samples/: monster_mango_loco.bmespecimen
md/ele_lab_exercises/: .gitignore  README.md
md/ele_lab_exercises/Lab1/: Lab1_notebook.md
md/ele_lab_exercises/Lab1/asc/: lab1_1.asc  lab1_2.asc  lab1_3.asc
md/ele_lab_exercises/Lab2/: Lab2_notebook.md
md/ele_lab_exercises/Lab2/asc/: lab2_capacitor.asc  lab2_inductor.asc  lab2_lab_procedure.asc
md/ele_lab_exercises/Lab2/picoscope/: measurements.psdata
md/ele_lab_exercises/Lab3/: Lab3_notebook.md
md/ele_lab_exercises/Lab4_REPORT/: Lab4_REPORT.md
md/ele_lab_exercises/Lab5/: Lab5_notebook.md
md/ele_lab_exercises/Lab6/: Lab6_notebook.md
md/lab_exercises/: readme.md
md/lab_exercises/Felix/: readme.md
md/lab_exercises/lab2/: answers.txt  lab2.xpr
md/lab_exercises/lab3/: lab3.xpr  lab3_answers.txt
python/ai_chatbot/: Dockerfile  LICENCE.txt  OLD_README.md  README.md
python/ai_chatbot/Debug&Deprecated/: main_pre_container.py  server.py
python/ai_chatbot/Doc/: dependancies.md  todo.md  version.md
python/ai_chatbot/testbench/: tester.py
python/algoritmit/: README.md
python/algoritmit/Exercise1/: Exercises1_Daniel_Kortesmaa.md
python/algoritmit/Exercise2/: Exercise2.py  Exercise2_Daniel_Kortesmaa.md  WEEK3_PRACTICE.ipynb
python/algoritmit/Exercise3/: Exercise3_Daniel_Kortesmaa.md  Exercise3_Daniel_Kortesmaa.py  WEEK 3 Exercises.ipynb
python/algoritmit/Exercise4/: Exercise4_Daniel_Kortesmaa.md  Exercise4_Daniel_Kortesmaa.py  exercise4_tasks.md
python/algoritmit/Exercise5/: Exercise5_Daniel_Kortesmaa.md  exercise5.py
python/algoritmit/Exercise6/: Exercise6.py  Exercise6_Daniel_Kortesmaa.md  WEEK 6 Assignments.docx  Week 6 Search and sort.ipynb  hybrid_csv_file.csv  sorted_csv_file.csv
python/algoritmit/Exercise7/: Exercise7.py  Exercise7_Daniel_Kortesmaa.md
python/algoritmit/Exercise8/: Exercise8_Daniel_Kortesmaa.md  exercise8.py
python/algoritmit/Exercise9/: Exercise9.py  Exercise9_Daniel_Kortesmaa.md
python/antares/: README.md
python/antares/doc/: dependancies.md  documentation.md  graphs.md
python/antares/src/: cleanup.py  flask_auth.py  fsm.py  mqtt_broker.py  mqtt_pub_debugger.py  mqtt_sub.py  reddit.json  reddit_api.py  speech_module.py  telegram.json  telegram_api.py  test.py
python/dataengineeringai/: README.md
python/dataengineeringai/eighth/: answers.md
python/dataengineeringai/fourth/: docker-compose.yml
python/dataengineeringai/sixth/: data.json  encrypted_data.json  encryption_key.key  pseudonym_mapping.json  python_script.py
python/dataengineeringai/src/: decrypt.py  decrypted.txt  encrypt.py  message.txt
python/dataengineeringai/third/: assignment.txt  md.md
python/object-oriented-programming-with-python/: README.md
rust/althael/: .gitignore  README.md
rust/althael/althael/: Cargo.toml
rust/althael/althael/data/: config.json  contents.json
rust/althael/althael/src/: common.rs  lib.rs  main.rs
rust/althael/althael/src/access/: clipboard.rs  fetch.rs  mod.rs  remove.rs
rust/althael/althael/src/app/: app.rs
rust/althael/althael/src/config/: config.rs  mod.rs
rust/althael/althael/src/encryption/: encryption.rs
rust/althael/althael/src/generation/: account.rs  combined.rs  mod.rs  password.rs
rust/althael/althael/tests/: add_and_remove_tests.rs  clipboard_tests.rs  config_tests.rs  name_generation_tests.rs  out
rust/althael/art/: not_ascii_magic.py
rust/althael/doc/: todo.md  todo_out.md
rust/rust-course-aalto/: README.md
rust/rust-course-aalto/Tooling/: readme.md
(+286 files in other folders)
