[package]
name = "althael"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15.3"
clipboard = "0.5"
termion = "1.5"
aes = "0.7"
block-modes = "0.8"
hmac = "0.12.1"
sha2 = "0.10.8"
hex-literal = "0.3"

